--- a/src/app/components/mensageiroAssociado/mensageiro-associado.edit.html
+++ b/src/app/components/mensageiroAssociado/mensageiro-associado.edit.html
@@ -5,7 +5,7 @@
     <h4 class="modal-title">Associação de Mensageiro</h4>
 </div>
 
-<form name="categoriaForm" ng-submit="categoriaForm.$valid && vm.save()" role="form" novalidate>
+<form name="mesageiroAssForm" ng-submit="mesageiroAssForm.$valid && vm.save()" role="form" novalidate>
     <div class="modal-body row" id="modal-body">
         <div class="input-group col-sm-12" ng-show="!vm.isEdited()">
 
